docs: Add user route API swag content
